src/jss_compiler/antlr_generated/JSSParser.py
# Generated from src/jss_compiler/JSS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JSSParser ( Parser ):

    grammarFileName = "JSS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'const'", "'function'", "'void'", 
                     "'if'", "'else'", "'while'", "'for'", "'break'", "'return'", 
                     "'class'", "'constructor'", "'new'", "'this'", "'true'", 
                     "'false'", "'null'", "'input'", "'console.log'", "'int'", 
                     "'real'", "'str'", "'bool'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'**='", "'&&='", "'||='", 
                     "'**'", "'=='", "'!='", "'>='", "'<='", "'&&'", "'||'", 
                     "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'>'", 
                     "'<'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
                     "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "FUNCTION", "VOID", "IF", 
                      "ELSE", "WHILE", "FOR", "BREAK", "RETURN", "CLASS", 
                      "CONSTRUCTOR", "NEW", "THIS", "TRUE", "FALSE", "NULL", 
                      "INPUT", "CONSOLE_LOG", "TYPE_INT", "TYPE_REAL", "TYPE_STR", 
                      "TYPE_BOOL", "REAL_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", 
                      "IDENTIFIER", "POWER_ASSIGN", "AND_AND_ASSIGN", "OR_OR_ASSIGN", 
                      "POWER", "EQUAL_EQUAL", "BANG_EQUAL", "GREATER_EQUAL", 
                      "LESS_EQUAL", "AND_AND", "OR_OR", "PLUS_PLUS", "MINUS_MINUS", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", 
                      "PERCENT_ASSIGN", "ASSIGN", "PLUS", "MINUS", "STAR", 
                      "SLASH", "PERCENT", "BANG", "GREATER", "LESS", "LEFT_PAREN", 
                      "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "SEMICOLON", "COMMA", "DOT", "WS", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDecl = 2
    RULE_constDecl = 3
    RULE_arrayTypeDim = 4
    RULE_declarator = 5
    RULE_functionDecl = 6
    RULE_parameters = 7
    RULE_parameter = 8
    RULE_returnType = 9
    RULE_type_ = 10
    RULE_classDecl = 11
    RULE_classMember = 12
    RULE_constructorDecl = 13
    RULE_block = 14
    RULE_statement = 15
    RULE_ifStmt = 16
    RULE_whileStmt = 17
    RULE_forStmt = 18
    RULE_forInit = 19
    RULE_returnStmt = 20
    RULE_breakStmt = 21
    RULE_exprStmt = 22
    RULE_expr = 23
    RULE_assignment = 24
    RULE_assignOp = 25
    RULE_logicalOr = 26
    RULE_logicalAnd = 27
    RULE_equalityRel = 28
    RULE_addition = 29
    RULE_multiplication = 30
    RULE_exponentiation = 31
    RULE_unary = 32
    RULE_postfix = 33
    RULE_postfixOp = 34
    RULE_argumentList = 35
    RULE_primary = 36

    ruleNames =  [ "program", "declaration", "varDecl", "constDecl", "arrayTypeDim", 
                   "declarator", "functionDecl", "parameters", "parameter", 
                   "returnType", "type_", "classDecl", "classMember", "constructorDecl", 
                   "block", "statement", "ifStmt", "whileStmt", "forStmt", 
                   "forInit", "returnStmt", "breakStmt", "exprStmt", "expr", 
                   "assignment", "assignOp", "logicalOr", "logicalAnd", 
                   "equalityRel", "addition", "multiplication", "exponentiation", 
                   "unary", "postfix", "postfixOp", "argumentList", "primary" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    FUNCTION=3
    VOID=4
    IF=5
    ELSE=6
    WHILE=7
    FOR=8
    BREAK=9
    RETURN=10
    CLASS=11
    CONSTRUCTOR=12
    NEW=13
    THIS=14
    TRUE=15
    FALSE=16
    NULL=17
    INPUT=18
    CONSOLE_LOG=19
    TYPE_INT=20
    TYPE_REAL=21
    TYPE_STR=22
    TYPE_BOOL=23
    REAL_LITERAL=24
    INTEGER_LITERAL=25
    STRING_LITERAL=26
    IDENTIFIER=27
    POWER_ASSIGN=28
    AND_AND_ASSIGN=29
    OR_OR_ASSIGN=30
    POWER=31
    EQUAL_EQUAL=32
    BANG_EQUAL=33
    GREATER_EQUAL=34
    LESS_EQUAL=35
    AND_AND=36
    OR_OR=37
    PLUS_PLUS=38
    MINUS_MINUS=39
    PLUS_ASSIGN=40
    MINUS_ASSIGN=41
    STAR_ASSIGN=42
    SLASH_ASSIGN=43
    PERCENT_ASSIGN=44
    ASSIGN=45
    PLUS=46
    MINUS=47
    STAR=48
    SLASH=49
    PERCENT=50
    BANG=51
    GREATER=52
    LESS=53
    LEFT_PAREN=54
    RIGHT_PAREN=55
    LEFT_BRACE=56
    RIGHT_BRACE=57
    LEFT_BRACKET=58
    RIGHT_BRACKET=59
    SEMICOLON=60
    COMMA=61
    DOT=62
    WS=63
    COMMENT=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSSParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(JSSParser.DeclarationContext,i)


        def getRuleIndex(self):
            return JSSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JSSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 92535723495780270) != 0):
                self.state = 74
                self.declaration()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(JSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(JSSParser.FunctionDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(JSSParser.ClassDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(JSSParser.StatementContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = JSSParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.functionDecl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.classDecl()
                pass
            elif token in [1, 2, 5, 7, 8, 9, 10, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 38, 39, 46, 47, 51, 54, 56]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(JSSParser.LET, 0)

        def type_(self):
            return self.getTypedRuleContext(JSSParser.Type_Context,0)


        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(JSSParser.DeclaratorContext,i)


        def SEMICOLON(self):
            return self.getToken(JSSParser.SEMICOLON, 0)

        def arrayTypeDim(self):
            return self.getTypedRuleContext(JSSParser.ArrayTypeDimContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.COMMA)
            else:
                return self.getToken(JSSParser.COMMA, i)

        def getRuleIndex(self):
            return JSSParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = JSSParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(JSSParser.LET)
            self.state = 88
            self.type_()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==58:
                self.state = 89
                self.arrayTypeDim()


            self.state = 92
            self.declarator()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==61:
                self.state = 93
                self.match(JSSParser.COMMA)
                self.state = 94
                self.declarator()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(JSSParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(JSSParser.CONST, 0)

        def type_(self):
            return self.getTypedRuleContext(JSSParser.Type_Context,0)


        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(JSSParser.DeclaratorContext,i)


        def SEMICOLON(self):
            return self.getToken(JSSParser.SEMICOLON, 0)

        def arrayTypeDim(self):
            return self.getTypedRuleContext(JSSParser.ArrayTypeDimContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.COMMA)
            else:
                return self.getToken(JSSParser.COMMA, i)

        def getRuleIndex(self):
            return JSSParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = JSSParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(JSSParser.CONST)
            self.state = 103
            self.type_()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==58:
                self.state = 104
                self.arrayTypeDim()


            self.state = 107
            self.declarator()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==61:
                self.state = 108
                self.match(JSSParser.COMMA)
                self.state = 109
                self.declarator()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(JSSParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeDimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.LEFT_BRACKET)
            else:
                return self.getToken(JSSParser.LEFT_BRACKET, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSSParser.ExprContext,i)


        def RIGHT_BRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.RIGHT_BRACKET)
            else:
                return self.getToken(JSSParser.RIGHT_BRACKET, i)

        def getRuleIndex(self):
            return JSSParser.RULE_arrayTypeDim

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayTypeDim" ):
                listener.enterArrayTypeDim(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayTypeDim" ):
                listener.exitArrayTypeDim(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayTypeDim" ):
                return visitor.visitArrayTypeDim(self)
            else:
                return visitor.visitChildren(self)




    def arrayTypeDim(self):

        localctx = JSSParser.ArrayTypeDimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayTypeDim)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(JSSParser.LEFT_BRACKET)
            self.state = 118
            self.expr()
            self.state = 119
            self.match(JSSParser.RIGHT_BRACKET)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==58:
                self.state = 120
                self.match(JSSParser.LEFT_BRACKET)
                self.state = 121
                self.expr()
                self.state = 122
                self.match(JSSParser.RIGHT_BRACKET)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JSSParser.IDENTIFIER, 0)

        def LEFT_BRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.LEFT_BRACKET)
            else:
                return self.getToken(JSSParser.LEFT_BRACKET, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSSParser.ExprContext,i)


        def RIGHT_BRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.RIGHT_BRACKET)
            else:
                return self.getToken(JSSParser.RIGHT_BRACKET, i)

        def ASSIGN(self):
            return self.getToken(JSSParser.ASSIGN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.COMMA)
            else:
                return self.getToken(JSSParser.COMMA, i)

        def getRuleIndex(self):
            return JSSParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarator" ):
                return visitor.visitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def declarator(self):

        localctx = JSSParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(JSSParser.IDENTIFIER)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==58:
                self.state = 127
                self.match(JSSParser.LEFT_BRACKET)
                self.state = 128
                self.expr()
                self.state = 129
                self.match(JSSParser.RIGHT_BRACKET)


            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 133
                self.match(JSSParser.ASSIGN)
                self.state = 147
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [58]:
                    self.state = 134
                    self.match(JSSParser.LEFT_BRACKET)
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 20478129457848320) != 0):
                        self.state = 135
                        self.expr()
                        self.state = 140
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==61:
                            self.state = 136
                            self.match(JSSParser.COMMA)
                            self.state = 137
                            self.expr()
                            self.state = 142
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)



                    self.state = 145
                    self.match(JSSParser.RIGHT_BRACKET)
                    pass
                elif token in [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 38, 39, 46, 47, 51, 54]:
                    self.state = 146
                    self.expr()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(JSSParser.FUNCTION, 0)

        def returnType(self):
            return self.getTypedRuleContext(JSSParser.ReturnTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(JSSParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(JSSParser.ParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(JSSParser.BlockContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = JSSParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(JSSParser.FUNCTION)
            self.state = 152
            self.returnType()
            self.state = 153
            self.match(JSSParser.IDENTIFIER)
            self.state = 154
            self.parameters()
            self.state = 155
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(JSSParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(JSSParser.RIGHT_PAREN, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.ParameterContext)
            else:
                return self.getTypedRuleContext(JSSParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.COMMA)
            else:
                return self.getToken(JSSParser.COMMA, i)

        def getRuleIndex(self):
            return JSSParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = JSSParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(JSSParser.LEFT_PAREN)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 149946368) != 0):
                self.state = 158
                self.parameter()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==61:
                    self.state = 159
                    self.match(JSSParser.COMMA)
                    self.state = 160
                    self.parameter()
                    self.state = 165
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 168
            self.match(JSSParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JSSParser.Type_Context,0)


        def IDENTIFIER(self):
            return self.getToken(JSSParser.IDENTIFIER, 0)

        def arrayTypeDim(self):
            return self.getTypedRuleContext(JSSParser.ArrayTypeDimContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)
